# Syphon

./: CMakeLists.txt  main.cpp
.github/workflows/: build_and_test.yml  cmake-multi-platform.yml
lexer/: automata.cpp  automata.h  automataTransformations.cpp  automataTransformations.h  regexToNFA.cpp  regexToNFA.h
tests/: test_automata.cpp
